# PolyCheck

./: .gitignore  LICENSE  README.md
PolyCheck-Clang/: CMakeLists.txt  DebugComputer.cpp  DebugComputer.hpp  DependenceAnalyzer.cpp  Dependences.cpp  LiveDataComputer.cpp  LiveDataComputer.hpp  Makefile  NOTES.txt  Orchestrator.cpp  Orchestrator.hpp  PolyCheck.cpp  PolyCheck.hpp  Processor.cpp  Processor.hpp  README.md  Statement.cpp  UnusedComputer.cpp  UnusedComputer.hpp  UnusedDeclComputer.cpp  array_pack.hpp  islw.hpp  pw_bug.c  statement.hpp  test.cc  testInsert.hpp  util.hpp
PolyCheck-Clang/old/: CodeParser.cpp  CodeParser.hpp  DependenceAnalyzer.hpp  Dependences.hpp  GeneralUtilityClass.cpp  PolyCheck.cpp  UnusedDeclComputer.hpp
PolyCheck-ROSE/: CMakeLists.txt  CodeParser.cpp  CodeParser.hpp  DebugComputer.hpp  Dependences.cpp  GeneralUtilityClass.cpp  GeneralUtilityClass.hpp  Makefile  Orchestrator.hpp  PolyCheck.cpp  PolyCheck.hpp  README.md  Statement.cpp  UnusedComputer.cpp  UnusedDeclComputer.cpp  UnusedDeclComputer.hpp  islw.hpp
PolyCheck-ROSE/old/: DebugComputer.cpp  DependenceAnalyzer.cpp  DependenceAnalyzer.hpp  LiveDataComputer.cpp  LiveDataComputer.hpp  Orchestrator.cpp  PolyCheck.cpp  Statement.hpp  UnusedComputer.hpp
tests/polybench/: gemm.c
